Deler opp appen i sections for varsler

--- a/components/Section/Section.module.css
+++ b/components/Section/Section.module.css
@@ -17,3 +17,11 @@
 .lightBlueBackground {
   background-color: var(--navds-semantic-color-interaction-primary-hover-subtle);
 }
+
+.lightPinkBackground {
+  background-color: #FFE6E6;
+}
+
+.lightGreenBackground {
+  background-color: var(--navds-global-color-green-100);
+}
