--- a/components/AppHeader/AppHeader.module.css
+++ b/components/AppHeader/AppHeader.module.css
@@ -1,6 +1,5 @@
 .appHeader {
   width: 100%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,4 +9,7 @@
   width: 100%;
   max-width: 600px;
   margin: 40px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
