--- a/src/components/Panel/BeskjedPanel/BeskjedPanel.module.css
+++ b/src/components/Panel/BeskjedPanel/BeskjedPanel.module.css
@@ -6,3 +6,15 @@
   padding: 2rem;
   border-radius: 8px;
 }
+
+@media screen and (max-width: 720px) {
+  .beskjedpanel {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 476px) {
+  .beskjedpanel {
+    padding: 0.25rem;
+  }
+}
